tests/ui-tests/tests/cases/inline-fragment-exhaustiveness.stderr
error: This InlineFragment is missing a variant for TestStruct.  Either provide a variant for this type or remove the exhaustive attribute
 --> tests/cases/inline-fragment-exhaustiveness.rs:7:10
  |
7 | #[derive(cynic::InlineFragments)]
  |          ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `cynic::InlineFragments` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Could not find a member named RandomOtherThing in the union MyUnionType.
  --> tests/cases/inline-fragment-exhaustiveness.rs:29:5
   |
29 |     RandomOtherThing(Dummy),
   |     ^^^^^^^^^^^^^^^^
